# mira-war-of-realms

./: .codecov.yml  .gitignore  Cargo.toml  README.md  build.rs  post_build.bat  post_build.sh
.github/workflows/: ci.yml  release.yml
assets/entities/characters/: placeholder.glb
assets/entities/characters/data/: ignara.json  lira.json
assets/entities/enemies/test_enemy/: placeholder.glb
assets/entities/player/: placeholder.glb  player_fast_run.glb  player_idle.glb  player_slow_run.glb
assets/environments/tutorial/: area_0002.glb  area_0003.glb  area_0005.glb
assets/lang/de-DE/: system.ftl
assets/locales/de-DE/: main.ftl.yml  system.ftl
assets/locales/en-US/: main.ftl.yml  system.ftl
assets/world/: test-room.glb
conf/: gameAudio.toml  gameConfig.toml  gameInput.toml  graphicsConfig.toml
crates/audio_lib/: Cargo.toml
crates/audio_lib/src/: audio.rs  audio_control.rs  lib.rs
crates/audio_lib/src/music/: mod.rs  title_music.rs
crates/battle_lib/: Cargo.toml
crates/battle_lib/src/: character_operations.rs  fight.rs  lib.rs  logic.rs  observes.rs  setup.rs  turn_logic.rs
crates/entities_lib/: Cargo.toml
crates/entities_lib/src/: lib.rs
crates/entities_lib/src/camera/: battle_camera.rs  logic.rs  mod.rs  mouse.rs  target_system.rs
crates/entities_lib/src/enemies/: mod.rs  test_enemy.rs
crates/entities_lib/src/enemies/ai/: base_ai.rs  mod.rs
crates/entities_lib/src/player/: animation.rs  input.rs  mod.rs
crates/environment_lib/: Cargo.toml
crates/environment_lib/src/: lib.rs
crates/environment_lib/src/battle/: entities_setup.rs  mod.rs
crates/environment_lib/src/environment/: env_handles.rs  env_init.rs  mod.rs  ready_up_handles.rs
crates/system/: Cargo.toml
crates/system/src/: battle_commons.rs  bundles.rs  characters.rs  commons.rs  config.rs  data.rs  lib.rs  run_conditions.rs  states.rs
crates/system/src/events/: mod.rs  player_events.rs  world_events.rs
crates/system/src/service/: attack_service.rs  character_service.rs  cursor_service.rs  load_service.rs  mod.rs
crates/system/src/shader/: mod.rs  toon_shader.wgsl
crates/system/src/utils/: key_code.rs
crates/ui_lib/: Cargo.toml
crates/ui_lib/src/: colors.rs  components.rs  lib.rs
crates/ui_lib/src/elements/: button.rs  check_box.rs  choice_box.rs  input.rs  mod.rs  slider.rs
crates/ui_lib/src/screens/: main_menu.rs  main_screen.rs  mod.rs  splash_screen.rs  title_screen.rs
examples/: ignara.json  point-light.json  spot-light.json
lang/: system_messages.ftl
lang/de-DE/: main.yaml  system.ftl  warning_screen.ftl
lang/en-US/: system.ftl  warning_screen.ftl
src/: game_client_window.rs  game_window.rs  languages.rs  main.rs  manager.rs
src/audio/: audio.rs  mod.rs
src/entities/: mod.rs
src/entities/enemies/: mod.rs  test_enemy.rs
src/entities/enemies/ai/: base_ai.rs  mod.rs
src/entities/player/: animation.rs  input.rs  mod.rs
src/environment/: env_handles.rs  env_init.rs  env_swap_system.rs  mod.rs  ready_up_handles.rs
src/events/: mod.rs  player_events.rs  world_events.rs
src/service/: attack_service.rs  battle_handle_service.rs  load_service.rs  mod.rs
src/states/: account_screen_state.rs  fix_asset_waiting.rs  mod.rs  pre_load_state.rs  splash_screen_state.rs  title_screen_state.rs
src/tests/: audio_tests.rs  game_window_tests.rs  language_tests.rs  manager_tests.rs  mod.rs
src/tests/battle/: fight_tests.rs  logic_tests.rs  mod.rs  setup_tests.rs  turn_logic_tests.rs
src/tests/entities/: base_ai_tests.rs  mod.rs  player_animation_tests.rs  player_input_tests.rs  test_enemy_tests.rs
src/tests/environment/: env_handles_tests.rs  env_init_tests.rs  mod.rs  ready_up_handles_tests.rs
src/tests/system/: character_service_tests.rs  cursor_service_tests.rs  mod.rs
src/ui/: mod.rs
src/utils/: key_code.rs  mod.rs
