[package]
name = "mira-war-of-realms"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mira-war-of-realms"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
debug = true

[dependencies]
bevy-inspector-egui = {version = "0.28.1"}
bevy_third_person_camera = {version = "0.2.0"}

bevy_rapier3d = {version = "0.28.0", features = ["simd-stable", "debug-render-3d", "default"]}
bevy_fluent = {version = "0.11"}

# Fluent
fluent = {version = "^0.15"}
fluent-bundle = {version = "^0.15"}
unic-langid = {version = "^0.9"}
rand = "0.8.5"

[dependencies.bevy]
version = "0.15.1"
default-features = true