[package]
name = "mira-war-of-realms"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Ramke <daniel.ramke@outlook.com>"]
exclude = ["dist", "build", "assets", "credits", "conf"]

[[bin]]
name = "mira-war-of-realms"
path = "src/main.rs"

[workspace]
members = [
    "crates/ui_lib",
    "crates/audio_lib",
    "crates/battle_lib",
    "crates/environment_lib",
    "crates/entities_lib",
    "crates/system"
]

[profile.release]
panic = "unwind"
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
debug = true

[dependencies]

# Debug
bevy-inspector-egui = {version = "0.30.0" }
bevy_kira_audio = { version = "^0.22.0", features = ["ogg"] }

# Fluent
bevy_fluent = {version = "0.11"}
fluent = {version = "0.16.1" }
fluent-bundle = {version = "^0.15"}

# Phisyc
bevy_rapier3d = {version = "0.29.0", features = ["simd-nightly", "debug-render-3d", "default"]}

# Internal Crates
system = { path = "crates/system" }
ui_lib = { path = "crates/ui_lib" }
audio_lib = { path = "crates/audio_lib" }
environment_lib = { path = "crates/environment_lib" }
entities_lib = { path = "crates/entities_lib" }
battle_lib = { path = "crates/battle_lib" }

chrono = {version = "0.4.40", features = ["clock"]}

[dependencies.bevy]
version = "0.15.3"
default-features = false
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "x11"
]
