[package]
name = "battle_lib"
version = "0.0.1"
edition = "2024"
authors = ["Daniel Ramke <daniel.ramke@outlook.com>"]

[lib]
name = "battle_lib"
path = "src/lib.rs"

[dependencies]
bevy_rapier3d = {version = "0.29.0", features = ["simd-nightly", "debug-render-3d", "default"]}
bevy_mod_outline = {version = "0.9.1"}

system = { path = "../system" }

[dependencies.bevy]
version = "0.15.3"
default-features = false
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "multi_threaded",
    "bevy_mesh_picking_backend"
]