[package]
name = "system"
version = "0.0.1"
edition = "2024"
authors = ["Daniel Ramke <daniel.ramke@outlook.com>"]

[lib]
name = "system"
path = "src/lib.rs"

[dependencies]
bevy_rapier3d = {version = "0.29.0", features = ["simd-nightly", "debug-render-3d", "default"]}
bevy_mod_outline = {version = "0.9.2"}

serde = { version = "^1.0", features = ["derive"] }
toml = {version = "^0.8.0", features = ["parse", "display"]}
serde_json = { version = "1.0.140" }

[dependencies.bevy]
version = "0.15.3"
default-features = false
features = [
    "animation",
    "bevy_animation",
    "bevy_state",
    "multi_threaded",
    "bevy_core_pipeline",
    "bevy_asset",
    "bevy_pbr",
]