[package]
name = "ui_lib"
version = "0.0.1"
edition = "2024"
authors = ["Daniel Ramke <daniel.ramke@outlook.com>"]

[lib]
name = "ui_lib"
path = "src/lib.rs"

[dependencies]
bevy_lunex = { version = "0.3.2", features = ["default"] }

system = { path = "../system" }

[dependencies.bevy]
version = "0.15.3"
default-features = false
features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "multi_threaded",
    "png",
    "jpeg"
]
